Build ISO image for testing

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -9,6 +9,9 @@ CC = $(CCPREFIX)gcc
 
 OBJS = boot.s.o main.c.o logger.c.o console.c.o gdt.c.o gdt.asm.o idt.c.o idt.asm.o isr.c.o isr.asm.o
 
+run: kernel
+	qemu-system-i386 -kernel kernel -d guest_errors
+
 all: kernel
 
 clean:
