Compile with -nostdinc

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -23,7 +23,7 @@ kernel: $(OBJS)
 	grub-file --is-x86-multiboot2 $@
 
 %.c.o: %.c
-	$(CC) -c $< -o $@ -std=gnu99 -ffreestanding -fno-builtin -fno-stack-protector -Wall -Wextra -I$(I)
+	$(CC) -c $< -o $@ -std=gnu99 -ffreestanding -nostdinc -fno-builtin -fno-stack-protector -Wall -Wextra -I$(I)
 
 %.s.o: %.s
 	$(AS) $< -o $@
