Only print modules info

--- a/iso/rootfs/boot/grub/grub.cfg
+++ b/iso/rootfs/boot/grub/grub.cfg
@@ -4,4 +4,6 @@ menuentry "KernelMQ, multiboot 1" {
 
 menuentry "KernelMQ, multiboot 2" {
     multiboot2 /boot/kernelmq
+    module2 /boot/grub/grub.cfg qwe rty
+    module2 /boot/kernelmq foo bar
 }
