Only support Multiboot 2 because of modules

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -7,10 +7,7 @@ CCPREFIX = i686-elf-
 AS = $(CCPREFIX)as
 CC = $(CCPREFIX)gcc
 
-OBJS = boot.s.o main.c.o logger.c.o console.c.o gdt.c.o gdt.asm.o idt.c.o idt.asm.o isr.c.o isr.asm.o multiboot2.c.o
-
-run: kernel
-	qemu-system-i386 -kernel kernel -d guest_errors
+OBJS = boot.s.o main.c.o logger.c.o console.c.o gdt.c.o gdt.asm.o idt.c.o idt.asm.o isr.c.o isr.asm.o multiboot.c.o
 
 all: kernel
 
@@ -19,7 +16,6 @@ clean:
 
 kernel: $(OBJS)
 	$(CC) -T linker.ld -o $@ -ffreestanding -nostdlib -lgcc $(OBJS)
-	grub-file --is-x86-multiboot $@
 	grub-file --is-x86-multiboot2 $@
 
 %.c.o: %.c
