--- a/iso/rootfs/boot/grub/grub.cfg
+++ b/iso/rootfs/boot/grub/grub.cfg
@@ -1,8 +1,4 @@
-menuentry "KernelMQ, multiboot 1" {
-    multiboot /boot/kernelmq
-}
-
-menuentry "KernelMQ, multiboot 2" {
+menuentry "KernelMQ" {
     multiboot2 /boot/kernelmq
     module2 /boot/grub/grub.cfg qwe rty
     module2 /boot/kernelmq foo bar
