C preprocessor with NASM sources

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -3,7 +3,7 @@ CCPREFIX = i686-elf-
 AS = $(CCPREFIX)as
 CC = $(CCPREFIX)gcc
 
-OBJS = boot.s.o main.c.o logger.c.o console.c.o gdt.c.o idt.c.o isr.c.o isr.asm.o multiboot.c.o protected.asm.o
+OBJS = boot.s.o main.c.o logger.c.o console.c.o gdt.c.o idt.c.o isr.c.o isr.asm.o multiboot.c.o protected.asm.cpp.o
 
 all: kernel
 
@@ -22,3 +22,9 @@ kernel: $(OBJS)
 
 %.asm.o: %.asm
 	nasm -felf -o $@ $<
+
+%.asm.cpp.o: %.asm.cpp
+	nasm -felf -o $@ $<
+
+%.asm.cpp: %.asm
+	cpp -P $< $@
