Join "arch/gdt.c" and "arch/idt.c" into "arch/protected.c"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -3,7 +3,7 @@ CCPREFIX = i686-elf-
 AS = $(CCPREFIX)as
 CC = $(CCPREFIX)gcc
 
-OBJS = boot.s.o main.c.o logger.c.o console.c.o gdt.c.o idt.c.o isr.c.o isr.asm.o multiboot.c.o protected.asm.cpp.o
+OBJS = boot.s.o main.c.o logger.c.o console.c.o isr.c.o isr.asm.o multiboot.c.o protected.asm.cpp.o protected.c.o
 
 all: kernel
 
