--- a/arch/Makefile
+++ b/arch/Makefile
@@ -11,6 +11,8 @@ OBJS += protected.c.o protected.asm.cpp.o
 OBJS += exception.c.o exception.asm.cpp.o
 OBJS += hwint.c.o     hwint.asm.cpp.o
 
+OBJS += timer.c.o
+
 all: kernel
 
 clean:
