--- a/arch/Makefile
+++ b/arch/Makefile
@@ -4,7 +4,7 @@ AS = $(CCPREFIX)as
 CC = $(CCPREFIX)gcc
 
 OBJS = start.s.o
-OBJS += main.c.o
+OBJS += init.c.o
 
 OBJS += logger.c.o console.c.o
 OBJS += multiboot.c.o
