Add file "arch/paging.c"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -10,6 +10,7 @@ OBJS += main.c.o
 OBJS += logger.c.o console.c.o kprintf.c.o
 OBJS += multiboot.c.o
 OBJS += memory.c.o
+OBJS += paging.c.o
 
 OBJS += protected.c.o protected.asm.cpp.o
 OBJS += exception.c.o exception.asm.cpp.o
