Export common paths

--- a/iso/Makefile
+++ b/iso/Makefile
@@ -2,8 +2,8 @@ run: all
 	qemu-system-i386 -cdrom image.iso
 
 all:
-	grub-file --is-x86-multiboot2 "$(K)"
-	cp "$(K)" rootfs/boot/kernelmq
+	grub-file --is-x86-multiboot2 "$(KERNEL)"
+	cp "$(KERNEL)" rootfs/boot/kernelmq
 	grub-mkrescue rootfs -o image.iso
 
 clean:
