Add function "kernelmq_info_validate_and_copy" and example output

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -1,8 +1,12 @@
 AS = $(CCPREFIX)as
 CC = $(CCPREFIX)gcc
 
+# Architecture-dependent
 OBJS = start.s.o
 OBJS += init.c.o
+
+# Architecture-independent
+OBJS += info.c.o
 OBJS += main.c.o
 
 OBJS += logger.c.o
