Add function "paging_load"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -5,7 +5,7 @@ CC = $(CCPREFIX)gcc
 OBJS = start.s.o
 OBJS += init.c.o
 OBJS += multiboot.c.o
-OBJS += paging.c.o
+OBJS += paging.c.o paging.asm.cpp.o
 
 # Architecture-independent
 OBJS += info.c.o
