--- a/iso/rootfs/boot/grub/grub.cfg
+++ b/iso/rootfs/boot/grub/grub.cfg
@@ -1,5 +1,4 @@
 menuentry "KernelMQ" {
     multiboot2 /boot/kernelmq hello kernel
-    module2 /boot/grub/grub.cfg qwe rty
-    module2 /boot/kernelmq foo bar
+    module2    /boot/dummy    qwe rty
 }
