--- a/arch/Makefile
+++ b/arch/Makefile
@@ -17,9 +17,12 @@ OBJS += console.c.o
 OBJS += kprintf.c.o
 
 OBJS += protected.c.o protected.asm.cpp.o
-OBJS += exception.c.o exception.asm.cpp.o
-OBJS += hwint.c.o     hwint.asm.cpp.o
-OBJS += syscall.c.o   syscall.asm.cpp.o
+
+OBJS += interrupt.asm.cpp.o
+
+OBJS += exception.c.o
+OBJS += hwint.c.o
+OBJS += syscall.c.o
 
 OBJS += timer.c.o
 
