Add function "tss_flush"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -18,7 +18,7 @@ OBJS += kprintf.c.o
 
 OBJS += protected.c.o protected.asm.cpp.o
 
-OBJS += tss.c.o
+OBJS += tss.c.o tss.asm.cpp.o
 
 OBJS += interrupt.asm.cpp.o
 
