Add two dummy modules

--- a/iso/rootfs/boot/grub/grub.cfg
+++ b/iso/rootfs/boot/grub/grub.cfg
@@ -1,4 +1,6 @@
 menuentry "KernelMQ" {
     multiboot2 /boot/kernelmq hello kernel
-    module2    /boot/dummy    qwe rty
+
+    module2 /boot/dummy1.bin foo bar
+    module2 /boot/dummy2.bin car cdr
 }
