Add module "panic"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -7,6 +7,7 @@ OBJS += init.c.o
 OBJS += multiboot.c.o
 OBJS += memory.c.o
 OBJS += paging.c.o paging.asm.cpp.o
+OBJS += panic.c.o  panic.asm.cpp.o
 
 # Architecture-independent
 OBJS += info.c.o
