Rename module "memory" to "pfa"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -6,7 +6,7 @@ OBJS = start.s.o
 OBJS += init.c.o
 OBJS += multiboot.c.o
 OBJS += panic.c.o  panic.asm.cpp.o
-OBJS += memory.c.o
+OBJS += pfa.c.o
 OBJS += paging.c.o paging.asm.cpp.o
 
 # Architecture-independent
