--- a/iso/Makefile
+++ b/iso/Makefile
@@ -3,9 +3,9 @@ run: all
 
 all:
 	grub-file --is-x86-multiboot2 "$(KERNEL)"
-	cp "$(KERNEL)" rootfs/boot/kernelmq
+	cp "$(KERNEL)" rootfs/boot/kernelmq.multiboot
 	cp $(MODULES)  rootfs/boot/
 	grub-mkrescue rootfs -o image.iso
 
 clean:
-	rm -f image.iso rootfs/boot/kernelmq rootfs/boot/*.bin
+	rm -f image.iso rootfs/boot/kernelmq.multiboot rootfs/boot/*.bin
