Change ext from ".multiboot" to ".multiboot2"

--- a/iso/rootfs/boot/grub/grub.cfg
+++ b/iso/rootfs/boot/grub/grub.cfg
@@ -1,5 +1,5 @@
 menuentry "KernelMQ" {
-    multiboot2 /boot/kernelmq.multiboot hello kernel
+    multiboot2 /boot/kernelmq.multiboot2 hello kernel
 
     module2 /boot/dummy1.bin foo bar
     module2 /boot/dummy2.bin car cdr
