--- a/arch/none/Makefile
+++ b/arch/none/Makefile
@@ -1,5 +1,3 @@
-OUTPUT = libarch.a
-
 OBJS = dummy.c.o
 
 all: $(OUTPUT)
@@ -8,7 +6,7 @@ clean:
 	rm -f $(OUTPUT) $(OBJS)
 
 $(OUTPUT): $(OBJS)
-	$(AR) -rcs $@ $(OBJS)
+	$(CC) -T linker.ld -o $(OUTPUT) -ffreestanding -nostdlib -lgcc $(OBJS) $(LIBSRC) $(LIBK)
 
 %.c.o: %.c
 	$(CC) -c $< -o $@ -std=gnu99 -ffreestanding -nostdinc -fno-builtin -fno-stack-protector -Wall -Wextra -I "$(INCLUDE)"
