Target "none" generates valid host executable

--- a/arch/none/Makefile
+++ b/arch/none/Makefile
@@ -1,4 +1,4 @@
-OBJS = dummy.c.o
+OBJS = main.o
 
 all: $(OUTPUT)
 
@@ -6,7 +6,7 @@ clean:
 	rm -f $(OUTPUT) $(OBJS)
 
 $(OUTPUT): $(OBJS)
-	$(CC) -T linker.ld -o $(OUTPUT) -ffreestanding -nostdlib -lgcc $(OBJS) $(LIBSRC) $(LIBK)
+	$(CC) -o $(OUTPUT) $(OBJS) $(LIBSRC) $(LIBK)
 
-%.c.o: %.c
-	$(CC) -c $< -o $@ -std=gnu99 -ffreestanding -nostdinc -fno-builtin -fno-stack-protector -Wall -Wextra -I "$(INCLUDE)"
+%.o: %.c
+	$(CC) -c $< -o $@ -std=gnu99 -Wall -Wextra -I $(INCLUDE)
