Add module "pagedir"

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -6,6 +6,7 @@ OBJS += multiboot.c.o
 OBJS += panic.c.o  panic.asm.cpp.o
 OBJS += pfa.c.o
 OBJS += paging.c.o paging.asm.cpp.o
+OBJS += pagedir.c.o
 
 # Built-in drivers
 OBJS += console.c.o
