--- a/iso/Makefile
+++ b/iso/Makefile
@@ -4,8 +4,7 @@ run: all
 all:
 	grub-file --is-x86-multiboot2 "$(KERNEL)"
 	cp "$(KERNEL)" rootfs/boot/kernelmq.multiboot2
-	cp $(MODULES)  rootfs/boot/
 	grub-mkrescue rootfs -o image.iso
 
 clean:
-	rm -f image.iso rootfs/boot/kernelmq.multiboot2 rootfs/boot/*.bin
+	rm -f image.iso rootfs/boot/kernelmq.multiboot2
