Move "arch/x86" to "arch"

--- a/arch/Makefile
+++ b/arch/Makefile
@@ -1,9 +1,56 @@
-SUBDIRS = x86
+# Architecture-dependent
+OBJS = start.s.o
+OBJS += main.c.o
+OBJS += init.c.o
+OBJS += multiboot.c.o
+OBJS += panic.c.o  panic.asm.cpp.o
+OBJS += pfa.c.o
+OBJS += paging.c.o paging.asm.cpp.o
+OBJS += pagedir.c.o
 
-all:
-	make all -C $(ARCH)
+# Architecture-independent
+OBJS += info.c.o
+OBJS += memset.c.o
+OBJS += strlen.c.o
+OBJS += itoa.c.o
+OBJS += strncpy.c.o
 
-clean: $(addprefix clean-, $(SUBDIRS))
+# Built-in drivers
+OBJS += console.c.o
+OBJS += pic.c.o
+OBJS += timer.c.o
+OBJS += keyboard.c.o
 
-clean-%:
-	make clean -C $*
+# For debugging
+OBJS += logger.c.o
+
+OBJS += protected.c.o protected.asm.cpp.o
+
+OBJS += tss.c.o tss.asm.cpp.o
+OBJS += tasks.asm.cpp.o
+
+OBJS += interrupt.asm.cpp.o
+
+OBJS += exception.c.o
+OBJS += hwint.c.o
+OBJS += syscall.c.o
+
+all: $(KERNEL)
+
+clean:
+	rm -f $(OBJS)
+
+$(KERNEL): $(OBJS)
+	$(CC) -T linker.ld -o $(KERNEL) -ffreestanding -nostdlib -lgcc $(OBJS)
+
+%.c.o: %.c
+	$(CC) -c $< -o $@ $(CFLAGS)
+
+%.s.o: %.s
+	$(AS) $< -o $@
+
+%.asm.cpp.o: %.asm.cpp
+	nasm -felf32 -o $@ $<
+
+%.asm.cpp: %.asm
+	cpp -P $< $@
