--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -1,5 +1,6 @@
 set timeout=0
 
 menuentry "KernelMQ" {
-    multiboot2 /boot/kernelmq.multiboot2 hello kernel
+    multiboot2 /boot/kernelmq.multiboot2
+    module2    /boot/syscallproc
 }
