Add process "procman"

--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -2,5 +2,5 @@ set timeout=0
 
 menuentry "KernelMQ" {
     multiboot2 /boot/kernelmq.multiboot2
-    module2    /boot/syscallproc
+    module2    /boot/procman
 }
