--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -3,4 +3,5 @@ set timeout=0
 menuentry "KernelMQ" {
     multiboot2 /boot/kernelmq.multiboot2
     module2    /boot/procman
+    module2    /boot/memgr
 }
