--- a/memgr/Makefile
+++ b/memgr/Makefile
@@ -1,7 +1,18 @@
+CCPREFIX = i686-elf-
+
+AR = $(CCPREFIX)ar
+AS = $(CCPREFIX)as
+CC = $(CCPREFIX)gcc
+
 MEMGR = memgr
 
-$(MEMGR): main.asm
-	nasm -f bin $< -o $@
+all: $(MEMGR)
 
 clean:
-	rm -f $(MEMGR)
+	rm -f $(MEMGR) main.o
+
+$(MEMGR): main.o
+	$(CC) -T linker.ld -o $@ -ffreestanding -nostdlib -lgcc $^
+
+main.o: main.asm
+	nasm -f elf32 $< -o $@
