--- a/procman/Makefile
+++ b/procman/Makefile
@@ -1,7 +1,18 @@
+CCPREFIX = i686-elf-
+
+AR = $(CCPREFIX)ar
+AS = $(CCPREFIX)as
+CC = $(CCPREFIX)gcc
+
 PROCMAN = procman
 
-$(PROCMAN): main.asm
-	nasm -f bin $< -o $@
+all: $(PROCMAN)
 
 clean:
-	rm -f $(PROCMAN)
+	rm -f $(PROCMAN) main.o
+
+$(PROCMAN): main.o
+	$(CC) -T linker.ld -o $@ -ffreestanding -nostdlib -lgcc $^
+
+main.o: main.asm
+	nasm -f elf32 $< -o $@
