Revert "Remove page frame allocator"
This reverts commit db8a61a779cd3192b451931ce8b41bd41d73f91a.

--- a/kernelmq/Makefile
+++ b/kernelmq/Makefile
@@ -14,6 +14,7 @@ OBJS += main.c.o
 OBJS += init.c.o
 OBJS += multiboot.c.o
 OBJS += panic.c.o  panic.asm.cpp.o
+OBJS += pfa.c.o
 OBJS += paging.c.o paging.asm.cpp.o
 OBJS += page_dir.c.o
 
