--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -1,7 +1,7 @@
 set timeout=0
 
 menuentry "KernelMQ" {
-    multiboot2 /boot/kernelmq.multiboot2
-    module2    /boot/procman
+    multiboot2 /boot/kernelmq.multiboot2 hello kernel
+    module2    /boot/procman hello module
     module2    /boot/memgr
 }
