Use function "kernaux_arch_i386_hang"

--- a/kernelmq/Makefile
+++ b/kernelmq/Makefile
@@ -12,7 +12,7 @@ CFLAGS = -std=gnu99 -ffreestanding -nostdinc -fno-builtin -fno-stack-protector -
 OBJS = start.s.o
 OBJS += main.c.o
 OBJS += multiboot.c.o
-OBJS += panic.c.o panic.asm.cpp.o
+OBJS += panic.c.o
 OBJS += paging.c.o
 OBJS += page_dir.c.o
 
