Rename kernel file to "tailix.multiboot2"

--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -1,5 +1,5 @@
 set timeout=0
 
-menuentry "KernelMQ" {
-    multiboot2 /boot/kernelmq.multiboot2 hello kernel
+menuentry "Tailix" {
+    multiboot2 /boot/tailix.multiboot2 hello kernel
 }
