--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -2,4 +2,6 @@ set timeout=0
 
 menuentry "Tailix" {
     multiboot2 /boot/tailix.multiboot2 hello kernel
+    module2    /boot/procman hello module
+    module2    /boot/memgr
 }
