Fix and upgrade code

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,4 +1,6 @@
-CCPREFIX = /home/kotovalexarian/repos/global/tailix/libkernaux/vendor/cross/root/bin/i386-elf-
+CCPREFIX = /home/kotovalexarian/repos/global/tailix/cross/root/bin/i386-elf-
+
+LIBFSC_PREFIX     = /opt/libfsc/i386
 LIBKERNAUX_PREFIX = /opt/libkernaux/i386
 
 AS = $(CCPREFIX)as
@@ -15,6 +17,7 @@ CFLAGS = \
 	-ffreestanding       \
 	-fno-builtin         \
 	-fno-stack-protector \
+	-I$(LIBFSC_PREFIX)/include \
 	-I$(LIBKERNAUX_PREFIX)/include
 
 CPPFLAGS = \
@@ -51,7 +54,7 @@ clean:
 	rm -f $(KERNEL) $(OBJS)
 
 $(KERNEL): $(OBJS)
-	$(CC) -T linker.ld -o $@ $^ -ffreestanding -nostdlib -lgcc -lkernaux -Wl,-L$(LIBKERNAUX_PREFIX)/lib
+	$(CC) -T linker.ld -o $@ $^ -ffreestanding -nostdlib -lkernaux -lc -lgcc -Wl,-L$(LIBFSC_PREFIX)/lib -Wl,-L$(LIBKERNAUX_PREFIX)/lib
 	grub-file --is-x86-multiboot2 $@
 
 %.c.o: %.c
