Use TSS flush from libkernaux

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -36,7 +36,7 @@ OBJS += timer.c.o
 
 OBJS += protected.c.o
 
-OBJS += tss.c.o tss.asm.cpp.o
+OBJS += tss.c.o
 OBJS += tasks.asm.cpp.o
 
 OBJS += interrupts/main.asm.cpp.o
