--- a/src/Makefile
+++ b/src/Makefile
@@ -25,6 +25,7 @@ CPPFLAGS = \
 # Architecture-dependent
 OBJS = start.s.o
 OBJS += main.c.o
+OBJS += poweroff.c.o
 OBJS += panic.c.o
 OBJS += paging.c.o
 
