Use new drivers

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 CCPREFIX = /home/kotovalexarian/repos/global/tailix/cross/root/bin/i386-elf-
 
 LIBKERNAUX_PREFIX = /opt/libkernaux/i386
+DRIVERS_PREFIX    = /opt/drivers/i386
 
 AS = $(CCPREFIX)as
 CC = $(CCPREFIX)gcc
@@ -16,7 +17,8 @@ CFLAGS = \
 	-ffreestanding       \
 	-fno-builtin         \
 	-fno-stack-protector \
-	-I$(LIBKERNAUX_PREFIX)/include
+	-I$(LIBKERNAUX_PREFIX)/include \
+	-I$(DRIVERS_PREFIX)/include
 
 CPPFLAGS = \
 	-DKERNAUX_ENABLE_ASSERT \
@@ -47,7 +49,7 @@ clean:
 	rm -f $(KERNEL) $(OBJS)
 
 $(KERNEL): $(OBJS)
-	$(CC) -T linker.ld -o $@ $^ -ffreestanding -nostdlib -lkernaux -lgcc -Wl,-L$(LIBKERNAUX_PREFIX)/lib
+	$(CC) -T linker.ld -o $@ $^ -ffreestanding -nostdlib -ldrivers -lkernaux -lgcc -Wl,-L$(LIBKERNAUX_PREFIX)/lib -Wl,-L$(DRIVERS_PREFIX)/lib
 	grub-file --is-x86-multiboot2 $@
 
 %.c.o: %.c
